# DecentralizedGeo-hub

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  style-guidelines.md
contribute/: contributing-guidelines.md  security.md
contribute/CODE_OF_CONDUCT/: index.html
contribute/contributing-guidelines/: index.html
contribute/security/: index.html
contribute/support/: index.html
docs/: documentation-guidelines.md  index.md  style-guidelines.md
docs/contribute/: CODE_OF_CONDUCT.md  contributing-guidelines.md  security.md  support.md
docs/ecosystem/astral-api/: getting-started.md  index.md
docs/ecosystem/astral-logbook/: index.md
docs/ecosystem/astral-sdk/: index.md
docs/ecosystem/decentralized-location-logger/: getting-started.md  index.md  prerequisites.md
docs/ecosystem/ipfs-stac/: client.md  examples.md  how-to-install.md  index.md
docs/ecosystem/web3-geospatial-dashboard/: features.md  getting-started.md  how-to-setup-extension.md  how-to-setup-ipfs-desktop.md  index.md  prerequisites.md  tech-stack.md  veda.md
docs/stylesheets/: extra.css
documentation-guidelines/: index.html
ecosystem/astral-api/: index.html
ecosystem/astral-api/ogc-api/: index.html
ecosystem/astral-logbook/: index.html
ecosystem/astral-sdk/: index.html
ecosystem/decentralized-location-logger/: index.html
ecosystem/ipfs-stac/: client.md  index.html  index.md
ecosystem/web3-geospatial-dashboard/: index.html
scripts/: sync-docs.sh
search/: search_index.json
storage-bin/how-to-contribute/: index.html
style-guidelines/: index.html
(+50 files in other folders)
